<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_main"
    tools:context=".view.MainActivity">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:background="@drawable/bg_card"
        android:padding="1dp">

        <androidx.cardview.widget.CardView
            android:layout_width="350dp"
            android:layout_height="650dp"
            app:cardCornerRadius="25dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/countdown"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="50dp"
                android:text="00:15"
                android:textSize="24sp"
                android:textStyle="bold"
                app:drawableTopCompat="@drawable/ic_baseline_timer_24">
            </TextView>

            <TextView
                android:id="@+id/questions"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="150dp"
                android:gravity="center"
                android:padding="10dp"
                android:text="SOME QUESTION"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="@color/black">
            </TextView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <android.widget.Button
                    android:id="@+id/option1"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_alignParentBottom="true"
                    android:layout_marginStart="40dp"
                    android:layout_marginTop="250dp"
                    android:layout_marginEnd="40dp"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/bg_validate_empty"
                    android:enabled="true"
                    android:onClick="option1Clicked"
                    android:text="@string/answer1"
                    android:textColor="@color/black"
                    android:textSize="20sp" />

                <android.widget.Button
                    android:id="@+id/option2"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_alignParentBottom="true"
                    android:layout_marginStart="40dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="40dp"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/bg_validate_empty"
                    android:enabled="true"
                    android:onClick="option2Clicked"
                    android:text="@string/answer2"
                    android:textColor="@color/black"
                    android:textSize="20sp" />

                <android.widget.Button
                    android:id="@+id/option3"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_alignParentBottom="true"
                    android:layout_marginStart="40dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="40dp"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/bg_validate_empty"
                    android:enabled="true"
                    android:onClick="option3Clicked"
                    android:text="@string/answer3"
                    android:textColor="@color/black"
                    android:textSize="20sp" />

                <android.widget.Button
                    android:id="@+id/option4"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_alignParentBottom="true"
                    android:layout_marginStart="40dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="40dp"
                    android:layout_marginBottom="40dp"
                    android:background="@drawable/bg_validate_empty"
                    android:enabled="true"
                    android:onClick="option4Clicked"
                    android:text="@string/answer4"
                    android:textColor="@color/black"
                    android:textSize="20sp" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>