<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_main"
    tools:context=".view.ResultActivity">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:background="@drawable/bg_card"
        android:padding="1dp">

        <androidx.cardview.widget.CardView
            android:layout_width="350dp"
            android:layout_height="450dp"
            app:cardCornerRadius="25dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="30dp"
                    android:layout_marginBottom="20dp"
                    android:fontFamily="@font/corporate_regular"
                    android:text="@string/yours_result"
                    android:textColor="@color/black"
                    android:textSize="50sp"
                    android:textStyle="bold">

                </TextView>

                <LinearLayout
                    android:id="@+id/output"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="25dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="25dp"
                    android:background="@drawable/bg_validate_empty"
                    android:gravity="center_horizontal"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/correctAns"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/corporate_regular"
                        android:text="10"
                        android:textColor="@color/black"
                        android:textSize="75sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/corporate_regular"
                        android:padding="5dp"
                        android:text="/"
                        android:textColor="@color/black"
                        android:textSize="75sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/totalAns"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/corporate_regular"
                        android:text="10"
                        android:textColor="@color/black"
                        android:textSize="75sp" />
                </LinearLayout>

                <TextView
                    android:id="@+id/performance"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="20dp"
                    android:fontFamily="@font/corporate_regular"
                    android:text="@string/performance"
                    android:textAllCaps="false"
                    android:textColor="@color/black"
                    android:textSize="45sp"
                    android:textStyle="bold|italic" />

                <android.widget.Button
                    android:id="@+id/btn_rest"
                    android:layout_width="match_parent"
                    android:layout_height="75dp"
                    android:layout_margin="20dp"
                    android:background="@drawable/bg_validate_empty"
                    android:enabled="true"
                    android:fontFamily="@font/corporate_regular"
                    android:stateListAnimator="@android:anim/slide_out_right"
                    android:text="@string/restart"
                    android:textAllCaps="false"
                    android:textColor="@color/black"
                    android:textSize="40sp"
                    android:textStyle="bold" />
            </LinearLayout>

        </androidx.cardview.widget.CardView>
    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>